--- a/MovieDemo/View/MovieDetail/Cell/ImageCell.xib
+++ b/MovieDemo/View/MovieDetail/Cell/ImageCell.xib
@@ -10,16 +10,19 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="169" id="KGk-i7-Jjw" customClass="CastIntroCell" customModule="MovieDemo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="420" height="169"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="242" id="KGk-i7-Jjw" customClass="ImageCell" customModule="MovieDemo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="423" height="242"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="420" height="169"/>
+                <rect key="frame" x="0.0" y="0.0" width="423" height="242"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="kVp-b7-izb">
-                        <rect key="frame" x="8" y="41" width="404" height="104"/>
+                        <rect key="frame" x="8" y="74" width="407" height="240"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="240" id="cf4-OV-BxM"/>
+                        </constraints>
                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Q0g-jn-8pE">
                             <size key="itemSize" width="128" height="128"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -28,10 +31,10 @@
                         </collectionViewFlowLayout>
                     </collectionView>
                     <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="FOb-bE-JT4">
-                        <rect key="frame" x="8" y="0.0" width="53" height="17"/>
+                        <rect key="frame" x="8" y="0.0" width="53" height="50"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mjw-5G-oTF">
-                                <rect key="frame" x="0.0" y="0.0" width="2" height="16"/>
+                                <rect key="frame" x="0.0" y="0.0" width="2" height="50"/>
                                 <color key="backgroundColor" name="SubColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="2" id="KKQ-wZ-gpP"/>
@@ -50,7 +53,7 @@
                 <constraints>
                     <constraint firstItem="FOb-bE-JT4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="2rn-aq-Xfd"/>
                     <constraint firstItem="FOb-bE-JT4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="AC0-xr-nC4"/>
-                    <constraint firstAttribute="bottom" secondItem="kVp-b7-izb" secondAttribute="bottom" constant="24" id="Fi0-xo-T0t"/>
+                    <constraint firstAttribute="bottom" secondItem="kVp-b7-izb" secondAttribute="bottom" id="Fi0-xo-T0t"/>
                     <constraint firstItem="kVp-b7-izb" firstAttribute="top" secondItem="FOb-bE-JT4" secondAttribute="bottom" constant="24" id="RPP-KC-72i"/>
                     <constraint firstItem="kVp-b7-izb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Tn3-IU-oOA"/>
                     <constraint firstAttribute="trailing" secondItem="kVp-b7-izb" secondAttribute="trailing" constant="8" id="oNC-zC-X18"/>
@@ -61,7 +64,7 @@
                 <outlet property="categoryLabel" destination="6CN-wC-Q0f" id="UOh-sO-bqD"/>
                 <outlet property="collectionView" destination="kVp-b7-izb" id="G1g-YJ-kh9"/>
             </connections>
-            <point key="canvasLocation" x="210.1449275362319" y="194.53125"/>
+            <point key="canvasLocation" x="207.97101449275365" y="218.97321428571428"/>
         </tableViewCell>
     </objects>
     <resources>
