--- a/MovieDemo/View/MovieDetail/Cell/CommentCell.xib
+++ b/MovieDemo/View/MovieDetail/Cell/CommentCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,15 +10,34 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="156" id="KGk-i7-Jjw" customClass="CommentCell" customModule="MovieDemo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="419" height="156"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="128" id="KGk-i7-Jjw" customClass="CommentCell" customModule="MovieDemo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="419" height="128"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="419" height="156"/>
+                <rect key="frame" x="0.0" y="0.0" width="419" height="128"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="bottom" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Pgc-HQ-Tb2">
+                        <rect key="frame" x="8" y="0.0" width="39" height="23.5"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JOp-jH-Mah">
+                                <rect key="frame" x="0.0" y="7.5" width="2" height="16"/>
+                                <color key="backgroundColor" name="SubColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="16" id="D1I-cz-qkb"/>
+                                    <constraint firstAttribute="width" constant="2" id="LD0-Id-TXM"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="熱評" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KNd-yr-0yX">
+                                <rect key="frame" x="10" y="6.5" width="29" height="17"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="72P-Sd-BUa">
-                        <rect key="frame" x="8" y="8" width="128" height="50"/>
+                        <rect key="frame" x="8" y="47.5" width="128" height="50"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="8tY-3d-s7x">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -45,13 +64,13 @@
                         </constraints>
                     </stackView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PAd-fT-Mnd">
-                        <rect key="frame" x="380" y="26" width="31" height="14.5"/>
+                        <rect key="frame" x="380" y="65.5" width="31" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.34957158570000002" green="0.41883793470000003" blue="0.706436336" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iO0-Up-eNF">
-                        <rect key="frame" x="8" y="66" width="403" height="82"/>
+                        <rect key="frame" x="8" y="105.5" width="403" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -64,25 +83,31 @@
                     <constraint firstItem="72P-Sd-BUa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="cxT-WJ-Krf"/>
                     <constraint firstItem="iO0-Up-eNF" firstAttribute="top" secondItem="72P-Sd-BUa" secondAttribute="bottom" constant="8" id="dSE-XQ-gae"/>
                     <constraint firstAttribute="bottom" secondItem="iO0-Up-eNF" secondAttribute="bottom" constant="8" id="gaI-JX-87m"/>
-                    <constraint firstItem="72P-Sd-BUa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="h2e-a7-Q5h"/>
+                    <constraint firstItem="72P-Sd-BUa" firstAttribute="top" secondItem="Pgc-HQ-Tb2" secondAttribute="bottom" constant="24" id="h2e-a7-Q5h"/>
+                    <constraint firstItem="Pgc-HQ-Tb2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="j4H-fa-2M9"/>
                     <constraint firstItem="PAd-fT-Mnd" firstAttribute="centerY" secondItem="8tY-3d-s7x" secondAttribute="centerY" id="k3h-Ax-1se"/>
+                    <constraint firstItem="Pgc-HQ-Tb2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="zKi-wL-85h"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="categoryStackView" destination="Pgc-HQ-Tb2" id="1WQ-Pj-C8r"/>
                 <outlet property="contentLabel" destination="iO0-Up-eNF" id="P1I-Tt-LAO"/>
                 <outlet property="postTimeLabel" destination="zH8-7M-Y80" id="S5k-Wu-FjL"/>
                 <outlet property="usefulCountLabel" destination="PAd-fT-Mnd" id="Dns-aE-Txj"/>
                 <outlet property="userImageView" destination="8tY-3d-s7x" id="1mm-KQ-Q6j"/>
                 <outlet property="userNameLabel" destination="iJc-XE-89N" id="YPk-aS-mKw"/>
             </connections>
-            <point key="canvasLocation" x="209.42028985507247" y="189.50892857142856"/>
+            <point key="canvasLocation" x="209.42028985507247" y="180.13392857142856"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="placeholder" width="987" height="777"/>
         <namedColor name="HomeTextColor">
             <color red="0.4440000057220459" green="0.44800001382827759" blue="0.45199999213218689" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="SubColor">
+            <color red="0.9560219646" green="0.094706065950000001" blue="0.40842247009999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
