--- a/MovieDemo/View/MovieDetail/Cell/CommentCell.xib
+++ b/MovieDemo/View/MovieDetail/Cell/CommentCell.xib
@@ -37,7 +37,7 @@
                         </subviews>
                     </stackView>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="72P-Sd-BUa">
-                        <rect key="frame" x="8" y="47.5" width="128" height="50"/>
+                        <rect key="frame" x="8" y="47.5" width="403" height="50"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="8tY-3d-s7x">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -52,10 +52,16 @@
                                 <color key="textColor" red="0.36585468049999997" green="0.38767564300000001" blue="0.75911223890000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zH8-7M-Y80">
-                                <rect key="frame" x="97" y="0.0" width="31" height="50"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zH8-7M-Y80">
+                                <rect key="frame" x="97" y="0.0" width="267" height="50"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" name="HomeTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PAd-fT-Mnd">
+                                <rect key="frame" x="372" y="0.0" width="31" height="50"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" red="0.34957158570000002" green="0.41883793470000003" blue="0.706436336" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -63,12 +69,6 @@
                             <constraint firstAttribute="height" constant="50" id="d4h-0z-E8a"/>
                         </constraints>
                     </stackView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PAd-fT-Mnd">
-                        <rect key="frame" x="380" y="65.5" width="31" height="14.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" red="0.34957158570000002" green="0.41883793470000003" blue="0.706436336" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iO0-Up-eNF">
                         <rect key="frame" x="8" y="105.5" width="403" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
@@ -77,15 +77,14 @@
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="trailing" secondItem="72P-Sd-BUa" secondAttribute="trailing" constant="8" id="0F0-NK-zJU"/>
                     <constraint firstAttribute="trailing" secondItem="iO0-Up-eNF" secondAttribute="trailing" constant="8" id="Bpt-3N-rMj"/>
                     <constraint firstItem="iO0-Up-eNF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="MXk-V2-vrc"/>
-                    <constraint firstAttribute="trailing" secondItem="PAd-fT-Mnd" secondAttribute="trailing" constant="8" id="R2w-KC-NaQ"/>
                     <constraint firstItem="72P-Sd-BUa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="cxT-WJ-Krf"/>
                     <constraint firstItem="iO0-Up-eNF" firstAttribute="top" secondItem="72P-Sd-BUa" secondAttribute="bottom" constant="8" id="dSE-XQ-gae"/>
                     <constraint firstAttribute="bottom" secondItem="iO0-Up-eNF" secondAttribute="bottom" constant="8" id="gaI-JX-87m"/>
                     <constraint firstItem="72P-Sd-BUa" firstAttribute="top" secondItem="Pgc-HQ-Tb2" secondAttribute="bottom" constant="24" id="h2e-a7-Q5h"/>
                     <constraint firstItem="Pgc-HQ-Tb2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="j4H-fa-2M9"/>
-                    <constraint firstItem="PAd-fT-Mnd" firstAttribute="centerY" secondItem="8tY-3d-s7x" secondAttribute="centerY" id="k3h-Ax-1se"/>
                     <constraint firstItem="Pgc-HQ-Tb2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="zKi-wL-85h"/>
                 </constraints>
             </tableViewCellContentView>
