User typealias and set comment title hide or not in detail viewModel, add private in front of IBOutlet.

--- a/MovieDemo/View/MovieDetail/MovieDetail.storyboard
+++ b/MovieDemo/View/MovieDetail/MovieDetail.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                                 <color key="backgroundColor" name="MainColor"/>
                             </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ptz-4D-AZT">
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ptz-4D-AZT">
                                 <rect key="frame" x="0.0" y="448" width="414" height="150"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="gdV-sN-wO2">
@@ -104,7 +104,7 @@
     </scenes>
     <resources>
         <namedColor name="MainColor">
-            <color red="0.16979593039999999" green="0.6279891729" blue="0.56141322849999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.17000000178813934" green="0.62800002098083496" blue="0.56099998950958252" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
